<?xml version="1.0"?>
<package format="2">
  <name>my_class_pkg</name>
  <version>0.0.0</version>
  <description>The my_class_pkg package</description>

  <maintainer email="bcsh@todo.todo">bcsh</maintainer>
  <license>TODO</license>

  <!-- 构建工具依赖 -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- 核心构建依赖 -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>  <!-- 新增：动态参数编译依赖 -->
  <build_depend>geometry_msgs</build_depend>        <!-- 新增：速度调控依赖 -->
<build_depend>tf2_ros</build_depend>
  <!-- 构建导出依赖 -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>  <!-- 新增 -->
  <build_export_depend>geometry_msgs</build_export_depend>        <!-- 新增 -->

 <build_export_depend>tf2_ros</build_export_depend>
  <!-- 运行依赖 -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>  <!-- 新增：动态参数运行依赖 -->
  <exec_depend>geometry_msgs</exec_depend>        <!-- 新增：速度调控运行依赖 -->

 <exec_depend>tf2_ros</exec_depend>

  <export>
  </export>
</package>

